<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pokemonlist.view.PokemonListActivity" >

    <LinearLayout
        android:id="@+id/linearHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.cardview.widget.CardView
            android:id="@+id/crdViewHeader"
            android:layout_width="match_parent"
            android:layout_height="160dp" >

            <FrameLayout
                android:id="@+id/frmLayoutCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_background" />

            <TextView
                android:id="@+id/txtTitleCard"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:gravity="center"
                android:text="@string/header_title"
                android:textColor="@color/black"
                android:textSize="@dimen/header_text_size" />

            <ImageView
                android:id="@+id/imgIconAbout"
                android:layout_width="23dp"
                android:layout_height="128dp"
                android:layout_marginEnd="32dp"
                android:src="@drawable/ic_about"
                android:layout_gravity="end"
                android:contentDescription="TODO" />

            <SearchView
                android:id="@+id/txtInputSearch"
                android:layout_width="match_parent"
                android:layout_height="@dimen/srcView_height"
                android:layout_marginTop="@dimen/srcView_marginTop"
                android:layout_marginStart="@dimen/srcView_marginStart"
                android:layout_marginEnd="@dimen/srcView_marginEnd"
                android:textColor="@color/black"
                android:hint="@string/txt_searchHint"
                android:textColorHint="@color/black_hint"
                android:paddingStart="8dp"
                android:background="@drawable/bkg_search_view" />

        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:id="@+id/frmLayoutDivider"
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:background="@drawable/bkg_divider"
            android:layout_gravity="bottom" />

        <ImageView
            android:id="@+id/gifLoadingList"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="120dp" />

        <TextView
            android:id="@+id/txtLoading"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:textColor="@color/black"
            android:text="@string/txt_loading"
            android:textSize="@dimen/txt_loading_text_size"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPokemonList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearHeader" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>